mudança em varias partes do projeto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header class="header">
         <img class="imagem-menu" src="/clima.png" alt="imagem tema do menu">
+        <!--menu do clima-->
         <ul class="header-menu">
             <li>🌤️ O Tempo</li>
             <li>📰 Notícias</li>
